--- a/index.html
+++ b/index.html
@@ -43,13 +43,16 @@
     </nav>
   </header>
 
-  <section id="home" class="hero">
-  <div class="hero-slider" aria-roledescription="carousel">
+ <!-- HERO (sliderlı cam kart) -->
+<section id="home" class="hero">
+  <div class="hero-slider" aria-label="Hero Slider">
     <!-- Slide 1 -->
-    <div class="slide is-active" aria-roledescription="slide" aria-label="1 / 3">
-      <div class="slide-inner">
-        <h1>Satış Odaklı Web Siteleri</h1>
-        <p>Müşterilerinizi çeken, satışlarınızı artıran profesyonel web siteleri.</p>
+    <div class="slide is-active">
+      <div class="slide-inner glass hero-card">
+        <h1 class="hero-title">Satış Odaklı Web Siteleri</h1>
+        <p class="hero-sub">
+          Müşterilerinizi çeken, satışlarınızı artıran profesyonel web siteleri ile işinizi büyütün.
+        </p>
         <div class="hero-buttons">
           <a href="#contact" class="btn-primary">Teklif Al</a>
           <a href="#why" class="btn-ghost">Detay</a>
@@ -58,10 +61,12 @@
     </div>
 
     <!-- Slide 2 -->
-    <div class="slide" aria-roledescription="slide" aria-label="2 / 3">
-      <div class="slide-inner">
-        <h1>Hızlı Performans</h1>
-        <p>CLS/TTFB/LCP odaklı optimize kod; Google’da üst sıralar.</p>
+    <div class="slide">
+      <div class="slide-inner glass hero-card">
+        <h1 class="hero-title">Hızlı Performans</h1>
+        <p class="hero-sub">
+          CLS/TBT/INP odaklı optimize kod; Google’da üst sıralar.
+        </p>
         <div class="hero-buttons">
           <a href="#packages" class="btn-primary">Paketleri Gör</a>
           <a href="#portfolio" class="btn-ghost">Portföy</a>
@@ -70,16 +75,25 @@
     </div>
 
     <!-- Slide 3 -->
-    <div class="slide" aria-roledescription="slide" aria-label="3 / 3">
-      <div class="slide-inner">
-        <h1>Kolay Yönetim</h1>
-        <p>WordPress uyumlu, form ve içerik güncellemeleri tek tık.</p>
+    <div class="slide">
+      <div class="slide-inner glass hero-card">
+        <h1 class="hero-title">Kolay Yönetim</h1>
+        <p class="hero-sub">
+          WordPress uyumlu; form ve içerik güncellemeleri tek tık.
+        </p>
         <div class="hero-buttons">
           <a href="#faq" class="btn-primary">S.S.S</a>
           <a href="#contact" class="btn-ghost">İletişim</a>
         </div>
       </div>
     </div>
+  </div>
+
+  <!-- Nav & Dots -->
+  <button class="nav prev" aria-label="Önceki">‹</button>
+  <button class="nav next" aria-label="Sonraki">›</button>
+  <div class="dots" role="tablist"></div>
+</section>
 
     <!-- Kontroller -->
     <button class="nav prev" aria-label="Önceki slayt">‹</button>
@@ -407,4 +421,5 @@
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
+
 
