--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="description" content="Satış odaklı web siteleri ile işinizi büyütün. Profesyonel tasarım ve güçlü performans.">
   <meta name="theme-color" content="#162857">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- İstersen font ekleyebilirsin; şu an sistem fontları kullanıyoruz -->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -43,67 +42,58 @@
     </nav>
   </header>
 
- <!-- HERO (sliderlı cam kart) -->
-<section id="home" class="hero">
-  <div class="hero-slider" aria-label="Hero Slider">
-    <!-- Slide 1 -->
-    <div class="slide is-active">
-      <div class="slide-inner glass hero-card">
-        <h1 class="hero-title">Satış Odaklı Web Siteleri</h1>
-        <p class="hero-sub">
-          Müşterilerinizi çeken, satışlarınızı artıran profesyonel web siteleri ile işinizi büyütün.
-        </p>
-        <div class="hero-buttons">
-          <a href="#contact" class="btn-primary">Teklif Al</a>
-          <a href="#why" class="btn-ghost">Detay</a>
+  <main>
+    <!-- HERO (sliderlı cam kart) -->
+    <section id="home" class="hero">
+      <div class="hero-slider" aria-label="Hero Slider">
+        <!-- Slide 1 -->
+        <div class="slide is-active">
+          <div class="slide-inner glass hero-card">
+            <h1 class="hero-title">Satış Odaklı Web Siteleri</h1>
+            <p class="hero-sub">
+              Müşterilerinizi çeken, satışlarınızı artıran profesyonel web siteleri ile işinizi büyütün.
+            </p>
+            <div class="hero-buttons">
+              <a href="#contact" class="btn-primary">Teklif Al</a>
+              <a href="#why" class="btn-ghost">Detay</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 2 -->
+        <div class="slide">
+          <div class="slide-inner glass hero-card">
+            <h1 class="hero-title">Hızlı Performans</h1>
+            <p class="hero-sub">
+              CLS/TBT/INP odaklı optimize kod; Google’da üst sıralar.
+            </p>
+            <div class="hero-buttons">
+              <a href="#packages" class="btn-primary">Paketleri Gör</a>
+              <a href="#portfolio" class="btn-ghost">Portföy</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 3 -->
+        <div class="slide">
+          <div class="slide-inner glass hero-card">
+            <h1 class="hero-title">Kolay Yönetim</h1>
+            <p class="hero-sub">
+              WordPress uyumlu; form ve içerik güncellemeleri tek tık.
+            </p>
+            <div class="hero-buttons">
+              <a href="#faq" class="btn-primary">S.S.S</a>
+              <a href="#contact" class="btn-ghost">İletişim</a>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- Slide 2 -->
-    <div class="slide">
-      <div class="slide-inner glass hero-card">
-        <h1 class="hero-title">Hızlı Performans</h1>
-        <p class="hero-sub">
-          CLS/TBT/INP odaklı optimize kod; Google’da üst sıralar.
-        </p>
-        <div class="hero-buttons">
-          <a href="#packages" class="btn-primary">Paketleri Gör</a>
-          <a href="#portfolio" class="btn-ghost">Portföy</a>
-        </div>
-      </div>
-    </div>
-
-    <!-- Slide 3 -->
-    <div class="slide">
-      <div class="slide-inner glass hero-card">
-        <h1 class="hero-title">Kolay Yönetim</h1>
-        <p class="hero-sub">
-          WordPress uyumlu; form ve içerik güncellemeleri tek tık.
-        </p>
-        <div class="hero-buttons">
-          <a href="#faq" class="btn-primary">S.S.S</a>
-          <a href="#contact" class="btn-ghost">İletişim</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Nav & Dots -->
-  <button class="nav prev" aria-label="Önceki">‹</button>
-  <button class="nav next" aria-label="Sonraki">›</button>
-  <div class="dots" role="tablist"></div>
-</section>
-
-    <!-- Kontroller -->
-    <button class="nav prev" aria-label="Önceki slayt">‹</button>
-    <button class="nav next" aria-label="Sonraki slayt">›</button>
-
-    <!-- Dots -->
-    <div class="dots" role="tablist" aria-label="Slider noktaları"></div>
-  </div>
-</section>
-
+      <!-- Oklar ve Noktalar (TEK KOPYA) -->
+      <button class="nav prev" aria-label="Önceki">‹</button>
+      <button class="nav next" aria-label="Sonraki">›</button>
+      <div class="dots" role="tablist" aria-label="Slider noktaları"></div>
+    </section>
 
     <!-- Why -->
     <section id="why">
@@ -421,5 +411,3 @@
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
-
-
