--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Slide 1 -->
     <div class="slide is-active">
       <!-- 🔽 Arka plan görseli -->
-      <img class="slide-bg" src="assets/img/hero-1.webp" alt="Modern web tasarım örneği" loading="lazy" decoding="async">
+      <img class="slide-bg" src="assets/img/hero.jpg" alt="Modern web tasarım örneği" loading="lazy" decoding="async">
 
       <div class="slide-inner glass hero-card">
         <h1 class="hero-title">Satış Odaklı Web Siteleri</h1>
@@ -426,4 +426,5 @@
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
+
 
