--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>Fom Dijital - Satış Odaklı Web Siteleri</title>
   <meta name="description" content="Satış odaklı web siteleri ile işinizi büyütün. Profesyonel tasarım ve güçlü performans.">
   <meta name="theme-color" content="#162857">
-  <!-- hero görseli preload -->
-  <link rel="preload" as="image" href="assets/img/hero-1.webp" imagesrcset="assets/img/hero-1.webp 1x" />
+  <link rel="preload" as="image" href="assets/img/hero.jpg" />
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -50,12 +49,9 @@
     <!-- HERO (Slider) -->
     <section id="home" class="hero">
       <div class="hero-slider" aria-label="Hero Slider" role="region">
-
         <!-- Slide 1 -->
         <div class="slide is-active">
-          <!-- Arka plan görseli artık div -->
           <div class="slide-bg" style="background-image: url('assets/img/hero.jpg');"></div>
-
           <div class="slide-inner glass hero-card">
             <h1 class="hero-title">Satış Odaklı Web Siteleri</h1>
             <p class="hero-sub">Müşterilerinizi çeken, satışlarınızı artıran profesyonel web siteleri ile işinizi büyütün.</p>
@@ -69,10 +65,9 @@
         <!-- Slide 2 -->
         <div class="slide">
           <div class="slide-bg" style="background-image: url('assets/img/hero-2.webp');"></div>
-
           <div class="slide-inner glass hero-card">
             <h1 class="hero-title">Hızlı Performans</h1>
-            <p class="hero-sub">CLS/TBT/INP odaklı optimize kod; Google’da üst sıralar.</p>
+            <p class="hero-sub">CLS / TBT / INP odaklı optimize kod; Google’da üst sıralar.</p>
             <div class="hero-buttons">
               <a href="#packages" class="btn-primary">Paketleri Gör</a>
               <a href="#portfolio" class="btn-ghost">Portföy</a>
@@ -83,10 +78,9 @@
         <!-- Slide 3 -->
         <div class="slide">
           <div class="slide-bg" style="background-image: url('assets/img/hero-3.webp');"></div>
-
           <div class="slide-inner glass hero-card">
             <h1 class="hero-title">Kolay Yönetim</h1>
-            <p class="hero-sub">WordPress uyumlu; form ve içerik güncellemeleri tek tık.</p>
+            <p class="hero-sub">Form ve içerik güncellemeleri tek tık.</p>
             <div class="hero-buttons">
               <a href="#faq" class="btn-primary">S.S.S</a>
               <a href="#contact" class="btn-ghost">İletişim</a>
@@ -94,7 +88,7 @@
           </div>
         </div>
 
-        <!-- Slider navigasyon -->
+        <!-- Slider kontrol -->
         <button class="nav prev" aria-label="Önceki">‹</button>
         <button class="nav next" aria-label="Sonraki">›</button>
         <div class="dots" role="tablist"></div>
@@ -109,22 +103,22 @@
           <div class="why-card glass">
             <div class="emoji">🚀</div>
             <h3>Hızlı Performans</h3>
-            <p>Ultra hızlı yüklenen web siteleri ile ziyaretçilerinizi kaybetmeyin. Google'da üst sıralarda yer alın.</p>
+            <p>Ultra hızlı yüklenen web siteleri ile ziyaretçilerinizi kaybetmeyin.</p>
           </div>
           <div class="why-card glass">
             <div class="emoji">💰</div>
-            <h3>Satış Odaklı Tasarım</h3>
-            <p>Her piksel satış için optimize. Ziyaretçilerinizi müşteriye dönüştürün.</p>
+            <h3>Satış Odaklı</h3>
+            <p>Dönüşüm odaklı tasarım ve içerik.</p>
           </div>
           <div class="why-card glass">
             <div class="emoji">📱</div>
             <h3>Mobil Uyumlu</h3>
-            <p>Tüm cihazlarda mükemmel görünüm. Mobil kullanıcılarınızı kaçırmayın.</p>
+            <p>Tüm cihazlarda mükemmel görünüm.</p>
           </div>
           <div class="why-card glass">
             <div class="emoji">🔧</div>
             <h3>Kolay Yönetim</h3>
-            <p>Teknik bilgi gerektirmeden kolayca güncelleyebileceğiniz altyapı.</p>
+            <p>Teknik bilgi gerektirmeden güncellenebilir altyapı.</p>
           </div>
         </div>
       </div>
@@ -140,13 +134,12 @@
             <div class="package-price">₺2.500</div>
             <ul class="package-features">
               <li>5 Sayfa Web Sitesi</li>
-              <li>Mobil Uyumlu Tasarım</li>
+              <li>Mobil Uyumlu</li>
               <li>SEO Optimizasyonu</li>
               <li>1 Yıl Hosting</li>
             </ul>
             <a href="#contact" class="btn-primary">Seç</a>
           </div>
-
           <div class="package-card">
             <h3>Profesyonel</h3>
             <div class="package-price">₺4.500</div>
@@ -158,7 +151,6 @@
             </ul>
             <a href="#contact" class="btn-primary">Seç</a>
           </div>
-
           <div class="package-card">
             <h3>Kurumsal</h3>
             <div class="package-price">₺7.500</div>
@@ -170,7 +162,6 @@
             </ul>
             <a href="#contact" class="btn-primary">Seç</a>
           </div>
-
           <div class="package-card">
             <h3>Premium</h3>
             <div class="package-price">₺12.000</div>
@@ -195,42 +186,42 @@
             <div class="process-number">1</div>
             <div class="process-content">
               <h3>İhtiyaç Analizi</h3>
-              <p>İşinizi ve hedeflerinizi detaylı analiz ederiz.</p>
+              <p>İşinizi ve hedeflerinizi analiz ediyoruz.</p>
             </div>
           </div>
           <div class="process-step">
             <div class="process-number">2</div>
             <div class="process-content">
-              <h3>Tasarım &amp; Planlama</h3>
-              <p>Markanıza özel tasarım konsepti ve site haritası oluştururuz.</p>
+              <h3>Tasarım & Planlama</h3>
+              <p>Markanıza uygun tasarım ve site haritası.</p>
             </div>
           </div>
           <div class="process-step">
             <div class="process-number">3</div>
             <div class="process-content">
               <h3>Geliştirme</h3>
-              <p>Modern teknolojiler kullanarak web sitenizi kodlarız.</p>
+              <p>Modern teknolojilerle kodlama.</p>
             </div>
           </div>
           <div class="process-step">
             <div class="process-number">4</div>
             <div class="process-content">
-              <h3>Test &amp; Optimizasyon</h3>
-              <p>Tüm cihazlarda test eder, performansı optimize ederiz.</p>
+              <h3>Test & Optimizasyon</h3>
+              <p>Tüm cihazlarda test ve hız optimizasyonu.</p>
             </div>
           </div>
           <div class="process-step">
             <div class="process-number">5</div>
             <div class="process-content">
               <h3>Yayınlama</h3>
-              <p>Web sitenizi canlıya alır, gerekli ayarları tamamlarız.</p>
+              <p>Siteyi canlıya alıyoruz.</p>
             </div>
           </div>
           <div class="process-step">
             <div class="process-number">6</div>
             <div class="process-content">
-              <h3>Destek &amp; Bakım</h3>
-              <p>Sürekli destek ve güncellemeler ile yanınızdayız.</p>
+              <h3>Destek</h3>
+              <p>Bakım ve güncelleme hizmeti.</p>
             </div>
           </div>
         </div>
@@ -295,16 +286,16 @@
         <h2 class="section-title">Müşteri Yorumları</h2>
         <div class="testimonials-grid">
           <div class="testimonial-card glass">
-            <div class="quote">"Fom Dijital sayesinde online satışlarımız 3 katına çıktı. Profesyonel yaklaşım; kaliteli iş."</div>
-            <div class="author">- Ahmet Yılmaz, CEO</div>
+            <div class="quote">"Fom Dijital sayesinde online satışlarımız 3 katına çıktı."</div>
+            <div class="author">- Ahmet Yılmaz</div>
           </div>
           <div class="testimonial-card glass">
-            <div class="quote">"Web sitemiz hem görsel hem teknik olarak mükemmel. Kesinlikle tavsiye ederim."</div>
-            <div class="author">- Elif Kaya, Pazarlama Müdürü</div>
+            <div class="quote">"Hem tasarım hem hız mükemmel."</div>
+            <div class="author">- Elif Kaya</div>
           </div>
           <div class="testimonial-card glass">
-            <div class="quote">"Hızlı teslimat ve sürekli destek. Çalışması keyifli bir ekip."</div>
-            <div class="author">- Mehmet Demir, İşletmeci</div>
+            <div class="quote">"Zamanında teslim ve destek."</div>
+            <div class="author">- Mehmet Demir</div>
           </div>
         </div>
       </div>
@@ -318,37 +309,19 @@
           <div class="faq-item">
             <button class="faq-question" aria-expanded="false">Web sitesi ne kadar sürede teslim edilir? <span class="faq-icon">▼</span></button>
             <div class="faq-answer">
-              <p>Proje kapsamına göre 7-21 iş günü. Acil projeler için esnek planlama yapıyoruz.</p>
+              <p>Proje kapsamına göre 7-21 iş günü.</p>
             </div>
           </div>
           <div class="faq-item">
             <button class="faq-question" aria-expanded="false">Hosting ve domain dahil mi? <span class="faq-icon">▼</span></button>
             <div class="faq-answer">
-              <p>Tüm paketlerde 1 yıl hosting + .com.tr domain içeren seçenekler sunuyoruz.</p>
+              <p>İsteğe bağlı paketlerimiz mevcuttur.</p>
             </div>
           </div>
           <div class="faq-item">
             <button class="faq-question" aria-expanded="false">Sitemi kendim güncelleyebilir miyim? <span class="faq-icon">▼</span></button>
             <div class="faq-answer">
-              <p>Evet. Yönetim paneli eğitimini ücretsiz veriyoruz.</p>
-            </div>
-          </div>
-          <div class="faq-item">
-            <button class="faq-question" aria-expanded="false">SEO optimizasyonu var mı? <span class="faq-icon">▼</span></button>
-            <div class="faq-answer">
-              <p>Temel SEO ayarları teslimde hazır. İleri seviye için ek paketlerimiz var.</p>
-            </div>
-          </div>
-          <div class="faq-item">
-            <button class="faq-question" aria-expanded="false">Destek hizmeti? <span class="faq-icon">▼</span></button>
-            <div class="faq-answer">
-              <p>Teslim sonrası 3 ay ücretsiz destek, ardından uygun bakım paketleri.</p>
-            </div>
-          </div>
-          <div class="faq-item">
-            <button class="faq-question" aria-expanded="false">Ödeme seçenekleri? <span class="faq-icon">▼</span></button>
-            <div class="faq-answer">
-              <p>%50 peşin + %50 teslimde. Kredi kartı ve havale/EFT kabul edilir.</p>
+              <p>Evet, size panel eğitimi veriyoruz.</p>
             </div>
           </div>
         </div>
@@ -362,13 +335,16 @@
         <div class="contact-container">
           <div class="contact-info">
             <h3>Bizimle İletişime Geçin</h3>
-            <div class="contact-item"><span class="emoji">📧</span>
+            <div class="contact-item">
+              <span class="emoji">📧</span>
               <div><strong>E-posta</strong><br>info@fomdigital.com</div>
             </div>
-            <div class="contact-item"><span class="emoji">📞</span>
+            <div class="contact-item">
+              <span class="emoji">📞</span>
               <div><strong>Telefon</strong><br>+90 (212) 555 0123</div>
             </div>
-            <div class="contact-item"><span class="emoji">📍</span>
+            <div class="contact-item">
+              <span class="emoji">📍</span>
               <div><strong>Adres</strong><br>İstanbul, Türkiye</div>
             </div>
           </div>
