--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <!-- Slide 2 -->
         <div class="slide">
-          <div class="slide-bg" style="background-image: url('assets/img/hero-2.webp');"></div>
+          <div class="slide-bg" style="background-image: url('assets/img/hero.jpg');"></div>
           <div class="slide-inner glass hero-card">
             <h1 class="hero-title">Hızlı Performans</h1>
             <p class="hero-sub">CLS / TBT / INP odaklı optimize kod; Google’da üst sıralar.</p>
@@ -77,7 +77,7 @@
 
         <!-- Slide 3 -->
         <div class="slide">
-          <div class="slide-bg" style="background-image: url('assets/img/hero-3.webp');"></div>
+          <div class="slide-bg" style="background-image: url('assets/img/hero.jpg');"></div>
           <div class="slide-inner glass hero-card">
             <h1 class="hero-title">Kolay Yönetim</h1>
             <p class="hero-sub">Form ve içerik güncellemeleri tek tık.</p>
@@ -392,3 +392,4 @@
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
+
