--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <header>
     <div class="header-container">
       <a href="#home" class="logo">Fom Dijital</a>
+      <a href="#home" class="logo">
+  <img src="assets/img/logodesk.png" alt="Fom Dijital Logo">
+</a>
 
       <nav aria-label="Ana navigasyon">
         <ul>
@@ -392,4 +395,5 @@
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
+
 
