--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <!-- Slide 2 -->
         <div class="slide">
-          <div class="slide-bg" style="background-image: url('assets/img/hero.jpg');"></div>
+          <div class="slide-bg" style="background-image: url('assets/img/website-slider.jpg');"></div>
           <div class="slide-inner glass hero-card">
             <h1 class="hero-title">Hızlı Performans</h1>
             <p class="hero-sub">CLS / TBT / INP odaklı optimize kod; Google’da üst sıralar.</p>
@@ -394,6 +394,7 @@
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
+
 
 
 
